--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 
 [dependencies]
 nanovg = { version = "1.0", features = ["gl3"] }
-exgui = { git = "https://github.com/exgui/exgui.git" }
+exgui = { path = "../exgui" }
 
 [dev-dependencies]
 glutin = "0.13"
