--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "exgui_renderer_nanovg"
 version = "0.1.0"
+edition = "2018"
 
 [dependencies]
 nanovg = { version = "1.0", features = ["gl3"] }
